[package]
name = "hpke-wasm"
version = "0.1.0"
authors = ["mryao"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "=0.2.93"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

hpke = { version = "0.12.0", default-features = false, features = ["x25519"] }
chacha20poly1305 = { version = "0.10.1", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
